--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -23,7 +23,7 @@ spring:
     show-sql: true
     properties:
       hibernate:
-        dialect: com.napjak.global.common.config.MysqlCustomDialect
+        dialect: com.napzak.global.common.config.MysqlCustomDialect
         format_sql: true
 
   data:
@@ -68,7 +68,7 @@ cloud:
       access-key: ${DEV_S3_ACCESS_KEY}
       secret-key: ${DEV_S3_SECRET_KEY}
   s3:
-    bucket: napjak-dev-bucket
+    bucket: napzak-dev-bucket
   stack:
     auto: false
 
