--- a/Dockerfile-dev
+++ b/Dockerfile-dev
@@ -17,4 +17,4 @@ FROM openjdk:17-jdk-alpine
 COPY --from=builder /usr/src/build/libs/napzak-0.0.1-SNAPSHOT.jar /app/napzak.jar
 
 # dev 프로파일로 실행
-ENTRYPOINT ["java", "-jar", "/app/app.jar", "--spring.profiles.active=dev"]
+ENTRYPOINT ["java", "-jar", "/app/napzak.jar", "--spring.profiles.active=dev"]
