--- a/.github/workflows/dev-CD.yml
+++ b/.github/workflows/dev-CD.yml
@@ -7,6 +7,7 @@ on:
 jobs:
   CI:
     runs-on: ubuntu-22.04
+    environment: dev
 
     steps:
       - name: Checkout
@@ -34,8 +35,8 @@ jobs:
       - name: Login to Docker Hub
         uses: docker/login-action@v2.2.0
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+          username: ${{ secrets.DEV_DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DEV_DOCKERHUB_TOKEN }}
 
       - name: Build and push
         uses: docker/build-push-action@v4
@@ -43,7 +44,7 @@ jobs:
           context: .
           file: ./Dockerfile-dev
           push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/${{ secrets.DEV_REPONAME }}
+          tags: ${{ secrets.DEV_DOCKERHUB_USERNAME }}/${{ secrets.DEV_REPONAME }}
 
   CD:
     needs: [CI]
