--- a/.gitignore
+++ b/.gitignore
@@ -181,6 +181,8 @@ Temporary Items
 
 # Ignore application-local.yml
 src/main/resources/application-local.yml
+src/main/resources/application-dev.yml
+src/main/resources/application-prod.yml
 
 ## Ignore Qclass
 src/main/generated/querydsl
