--- a/.github/workflows/prod-CD.yml
+++ b/.github/workflows/prod-CD.yml
@@ -13,6 +13,16 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
+      - name: Cache Gradle
+        uses: actions/cache@v3
+        with:
+          path: |
+            ~/.gradle/caches
+            ~/.gradle/wrapper
+          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
+          restore-keys: |
+            ${{ runner.os }}-gradle-
+
       - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
@@ -21,8 +31,8 @@ jobs:
 
       - name: create secret config file
         run: |
-          cd src/main/resources
-          echo "${{ secrets.APPLICATION_PROD }}" > ./application-prod.yml
+          mkdir -p src/main/resources
+          echo "${{ secrets.APPLICATION_PROD }}" > src/main/resources/application-prod.yml
 
       - name: build with gradle
         run: |
