--- a/.github/workflows/dev-CD.yml
+++ b/.github/workflows/dev-CD.yml
@@ -13,18 +13,28 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
+      - name: Cache Gradle
+        uses: actions/cache@v3
+        with:
+          path: |
+            ~/.gradle/caches
+            ~/.gradle/wrapper
+          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
+          restore-keys: |
+            ${{ runner.os }}-gradle-
+
       - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
           java-version: '17'
           distribution: 'corretto'
 
-      - name: create secret config file
+      - name: Create secret config file
         run: |
-          cd src/main/resources
-          echo "${{ secrets.APPLICATION_DEV }}" > ./application-dev.yml
+          mkdir -p src/main/resources
+          echo "${{ secrets.APPLICATION_DEV }}" > src/main/resources/application-dev.yml
 
-      - name: build with gradle
+      - name: Build with Gradle
         run: |
           chmod +x gradlew
           ./gradlew clean build -x test
@@ -38,7 +48,7 @@ jobs:
           username: ${{ secrets.DEV_DOCKERHUB_USERNAME }}
           password: ${{ secrets.DEV_DOCKERHUB_TOKEN }}
 
-      - name: Build and push
+      - name: Build and push Docker image
         uses: docker/build-push-action@v4
         with:
           context: .
@@ -52,13 +62,19 @@ jobs:
     environment: dev
 
     steps:
-      - name: Docker Image Pull and Container Run
+      - name: Docker Image Pull and Run
         uses: appleboy/ssh-action@master
         with:
           host: ${{ secrets.DEV_SERVER_HOST }}
           username: ${{ secrets.DEV_SERVER_USERNAME }}
           key: ${{ secrets.DEV_SERVER_KEY }}
           script: |
-            # 배포 스크립트(deploy.sh) 실행
-            cd ~
-            ./deploy.sh
+            echo "Stopping previous deploy.sh processes..."
+            ps aux | grep deploy.sh | grep -v grep | awk '{print $2}' | xargs -r kill -9
+            
+            echo "Stopping and removing Docker containers..."
+            docker ps -q | xargs -r docker stop
+            docker ps -aq | xargs -r docker rm
+      
+            echo "Cleaning unused Docker resources..."
+            docker system prune -f
