[#21] refactor(Dockerfile-*): 명령어 수정

--- a/Dockerfile-prod
+++ b/Dockerfile-prod
@@ -1,17 +1,20 @@
 FROM gradle:8.8-jdk17 AS builder
 WORKDIR /usr/src
 
-COPY settings.gradle build.gradle ./
-RUN ./gradlew dependencies --refresh-dependencies
-
-COPY src /usr/src/src
-COPY gradle /usr/src/gradle
+# 필요한 파일 복사
 COPY gradlew /usr/src/gradlew
-RUN ./gradlew clean build -x test
+COPY gradle /usr/src/gradle
+COPY settings.gradle build.gradle ./
+COPY src /usr/src/src
+
+# 실행 권한 추가
+RUN chmod +x ./gradlew
+
+# Gradle 명령 실행
+RUN ./gradlew dependencies --refresh-dependencies
 
 FROM openjdk:17-jdk-alpine
 WORKDIR /app
 COPY --from=builder /usr/src/build/libs/napzak-0.0.1-SNAPSHOT.jar /app/napzak.jar
 
-# prod 프로파일로 실행
 ENTRYPOINT ["java", "-jar", "/app/napzak.jar", "--spring.profiles.active=prod"]
