--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -1,11 +1,8 @@
-#--- docker-compose-prod.yml (blue, green) ---
 version: '3'
 services:
   napzak-prod-blue:
     container_name: napzak-prod-blue
-    build:
-      context: .
-      dockerfile: Dockerfile-prod
+    image: "sailin1367/napzak-prod:latest"
     ports:
       - "8081:8080"
     networks:
@@ -13,9 +10,7 @@ services:
 
   napzak-prod-green:
     container_name: napzak-prod-green
-    build:
-      context: .
-      dockerfile: Dockerfile-prod
+    image: "sailin1367/napzak-prod:latest"
     ports:
       - "8082:8080"
     networks:
