--- a/.github/workflows/dev-CD.yml
+++ b/.github/workflows/dev-CD.yml
@@ -54,7 +54,7 @@ jobs:
           context: .
           file: ./Dockerfile-dev
           push: true
-          tags: ${{ secrets.DEV_DOCKERHUB_USERNAME }}/${{ secrets.DEV_REPONAME }}
+          tags: ${{ secrets.DEV_DOCKERHUB_USERNAME }}/${{ secrets.DEV_REPONAME }}:latest
 
   CD:
     needs: [CI]
@@ -70,4 +70,7 @@ jobs:
           key: ${{ secrets.DEV_SERVER_KEY }}
           script: |
             cd ~
+            # 서버에서 푸시된 이미지를 pull
+            docker pull ${{ secrets.DEV_DOCKERHUB_USERNAME }}/${{ secrets.DEV_REPONAME }}:latest
+            # 무중단 배포 스크립트
             ./deploy.sh
