--- a/Dockerfile-prod
+++ b/Dockerfile-prod
@@ -12,4 +12,4 @@ FROM openjdk:17-jdk-alpine
 WORKDIR /app
 COPY --from=builder /usr/src/build/libs/napzak-0.0.1-SNAPSHOT.jar /app/napzak.jar
 
-ENTRYPOINT ["java", "-jar", "/app/napzak.jar", "--spring.profiles.active=prod"]
+ENTRYPOINT ["java", "-jar", "/app/app.jar", "--spring.profiles.active=prod"]
