--- a/Dockerfile-prod
+++ b/Dockerfile-prod
@@ -10,6 +10,6 @@ RUN ./gradlew clean build -x test
 
 FROM openjdk:17-jdk-alpine
 WORKDIR /app
-COPY --from=builder /usr/src/build/libs/napzak-0.0.1-SNAPSHOT.jar /app/napzak.jar
+COPY --from=builder /usr/src/build/libs/napzak-0.0.1-SNAPSHOT.jar /app/app.jar
 
 ENTRYPOINT ["java", "-jar", "/app/app.jar", "--spring.profiles.active=prod"]
