[#28] refactor: dev ci-cd 수정

--- a/.github/workflows/dev-CD.yml
+++ b/.github/workflows/dev-CD.yml
@@ -69,8 +69,19 @@ jobs:
           username: ${{ secrets.DEV_SERVER_USERNAME }}
           key: ${{ secrets.DEV_SERVER_KEY }}
           script: |
-            cd ~
-            # 서버에서 푸시된 이미지를 pull
-            docker pull ${{ secrets.DEV_DOCKERHUB_USERNAME }}/${{ secrets.DEV_REPONAME }}:latest
-            # 무중단 배포 스크립트
-            ./deploy.sh
+            # 2) /home/ubuntu/35-APPJAM-SERVER-NAPZAKMARKET 디렉토리로 이동
+            cd /home/ubuntu/35-APPJAM-SERVER-NAPZAKMARKET
+            
+            # 3) .env 파일 작성
+            echo "REDIS_PASSWORD=${{ secrets.DEV_REDIS_PASSWORD }}" > .env
+
+            # 4) docker-compose pull + up
+            docker-compose --env-file .env pull napzak-dev
+            docker-compose --env-file .env up -d --remove-orphans
+
+            # 5) 로그 확인
+            docker logs napzak-dev
+            docker logs napzak-dev-redis
+
+            # 6) .env 파일 삭제
+            rm .env
