--- a/.github/workflows/dev-CI.yml
+++ b/.github/workflows/dev-CI.yml
@@ -25,6 +25,8 @@ jobs:
           echo "${{ secrets.APPLICATION_DEV }}" > ./application-dev.yml
 
       - name: build with gradle
+        env:
+          REDIS_PASSWORD: ${{ secrets.DEV_REDIS_PASSWORD }}
         run: |
           chmod +x gradlew
           ./gradlew clean build -x test
