--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -1,23 +1,27 @@
-version: '3'
+version: "3.8"
+
 services:
-  napzak-dev-blue:
-    container_name: napzak-dev-blue
-    # GitHub Actions가 푸시한 Docker Hub 이미지
+  napzak-dev:
+    container_name: napzak-dev
     image: "sailin1367/napzak-dev:latest"
     ports:
-      - "8081:8080"
-    networks:
-      - napzak-dev-net
+      - "8080:8080"
+    environment:
+      - REDIS_PASSWORD=${REDIS_PASSWORD}  # Redis 비밀번호 전달
+    depends_on:
+      redis:
+        condition: service_healthy
 
-  napzak-dev-green:
-    container_name: napzak-dev-green
-    # 똑같이 latest 태그 사용 (blue/green 둘 다 동일 이미지)
-    image: "sailin1367/napzak-dev:latest"
+  redis:
+    container_name: napzak-dev-redis
+    image: redis:7.0-alpine
+    command: ["redis-server", "--requirepass", "${REDIS_PASSWORD}"]
     ports:
-      - "8082:8080"
-    networks:
-      - napzak-dev-net
-
-networks:
-  napzak-dev-net:
-    driver: bridge
+      - "6379:6379"
+    environment:
+      - REDIS_PASSWORD=${REDIS_PASSWORD}
+    healthcheck:
+      test: ["CMD", "redis-cli", "-a", "${REDIS_PASSWORD}", "ping"]
+      interval: 10s
+      timeout: 5s
+      retries: 3
