[#28] refactor: prod ci-cd 수정

--- a/.github/workflows/prod-CD.yml
+++ b/.github/workflows/prod-CD.yml
@@ -69,6 +69,19 @@ jobs:
           username: ${{ secrets.PROD_SERVER_USERNAME }}
           key: ${{ secrets.PROD_SERVER_KEY }}
           script: |
-            cd ~
-            docker pull ${{ secrets.PROD_DOCKERHUB_USERNAME }}/${{ secrets.PROD_REPONAME }}:latest
-            ./deploy.sh
+            # 2) /home/ubuntu/35-APPJAM-SERVER-NAPZAKMARKET 디렉토리로 이동
+            cd /home/ubuntu/35-APPJAM-SERVER-NAPZAKMARKET
+            
+            # 3) .env 파일 작성
+            echo "REDIS_PASSWORD=${{ secrets.PROD_REDIS_PASSWORD }}" > .env
+
+            # 4) docker-compose pull + up
+            docker-compose --env-file .env pull napzak-prod
+            docker-compose --env-file .env up -d --remove-orphans
+
+            # 5) 로그 확인
+            docker logs napzak-prod
+            docker logs napzak-prod-redis
+
+            # 6) .env 파일 삭제
+            rm .env
