--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -1,21 +1,27 @@
-version: '3'
+version: "3.8"
+
 services:
-  napzak-prod-blue:
-    container_name: napzak-prod-blue
+  napzak-prod:
+    container_name: napzak-prod
     image: "sailin1367/napzak-prod:latest"
     ports:
-      - "8081:8080"
-    networks:
-      - napzak-prod-net
+      - "8080:8080"
+    environment:
+      - REDIS_PASSWORD=${REDIS_PASSWORD}  # Redis 비밀번호 전달
+    depends_on:
+      redis:
+        condition: service_healthy
 
-  napzak-prod-green:
-    container_name: napzak-prod-green
-    image: "sailin1367/napzak-prod:latest"
+  redis:
+    container_name: napzak-prod-redis
+    image: redis:7.0-alpine
+    command: ["redis-server", "--requirepass", "${REDIS_PASSWORD}"]
     ports:
-      - "8082:8080"
-    networks:
-      - napzak-prod-net
-
-networks:
-  napzak-prod-net:
-    driver: bridge
+      - "6379:6379"
+    environment:
+      - REDIS_PASSWORD=${REDIS_PASSWORD}
+    healthcheck:
+      test: ["CMD", "redis-cli", "-a", "${REDIS_PASSWORD}", "ping"]
+      interval: 10s
+      timeout: 5s
+      retries: 3
