[#28] refactor: docker-compose 지정

--- a/.github/workflows/dev-CD.yml
+++ b/.github/workflows/dev-CD.yml
@@ -76,8 +76,8 @@ jobs:
             echo "REDIS_PASSWORD=${{ secrets.DEV_REDIS_PASSWORD }}" > .env
 
             # 4) docker-compose pull + up
-            docker-compose --env-file .env pull napzak-dev
-            docker-compose --env-file .env up -d --remove-orphans
+            docker-compose -f docker-compose-dev.yml pull
+            docker-compose -f docker-compose-dev.yml up -d --remove-orphans
 
             # 5) 로그 확인
             docker logs napzak-dev
