--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -6,22 +6,26 @@ services:
     image: "sailin1367/napzak-prod:latest"
     ports:
       - "8080:8080"
-    environment:
-      - REDIS_PASSWORD=${REDIS_PASSWORD}  # Redis 비밀번호 전달
     depends_on:
       redis:
         condition: service_healthy
+    networks:
+      - napzak-prod-net
 
   redis:
     container_name: napzak-prod-redis
     image: redis:7.0-alpine
-    command: ["redis-server", "--requirepass", "${REDIS_PASSWORD}"]
+    command: ["redis-server", "--requirepass", "napzakprod"]
     ports:
       - "6379:6379"
-    environment:
-      - REDIS_PASSWORD=${REDIS_PASSWORD}
     healthcheck:
-      test: ["CMD", "redis-cli", "-a", "${REDIS_PASSWORD}", "ping"]
+      test: ["CMD", "redis-cli", "-a", "napzakprod", "ping"]
       interval: 10s
       timeout: 5s
       retries: 3
+    networks:
+      - napzak-prod-net
+
+networks:
+  napzak-prod-net:
+    driver: bridge
