[#42] refactor: dev CI/CD trigger 예외 정의

--- a/.github/workflows/dev-CD.yml
+++ b/.github/workflows/dev-CD.yml
@@ -2,7 +2,10 @@ name: dev-CD
 
 on:
   push:
-    branches: [ "develop" ]
+    branches:
+      - develop
+    branches-ignore:
+      - main
 
 jobs:
   CI:
