--- a/.github/workflows/dev-CI.yml
+++ b/.github/workflows/dev-CI.yml
@@ -2,7 +2,10 @@ name: dev-CI
 
 on:
   pull_request:
-    branches: [ "develop" ]
+    branches:
+      - develop
+    branches-ignore:
+      - main
 
 jobs:
   build:
