[#49] refactor: docker-compose 수정

--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -25,6 +25,9 @@ services:
       retries: 3
     networks:
       - napzak-prod-net
+    deploy:
+      restart_policy:
+        condition: none
 
 networks:
   napzak-prod-net:
