--- a/.github/workflows/dev-CD.yml
+++ b/.github/workflows/dev-CD.yml
@@ -37,7 +37,7 @@ jobs:
       - name: Build with Gradle
         run: |
           chmod +x gradlew
-          ./gradlew clean build -x test
+          ./gradlew clean build -x test --build-cache
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2.9.1
