--- a/.github/workflows/dev-CD.yml
+++ b/.github/workflows/dev-CD.yml
@@ -34,7 +34,7 @@ jobs:
       - name: Build with Gradle
         run: |
           chmod +x gradlew
-          ./gradlew clean build -x test --no-daemon --info
+          ./gradlew clean build -x test
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2.9.1
