--- a/.github/workflows/prod-CD.yml
+++ b/.github/workflows/prod-CD.yml
@@ -37,7 +37,7 @@ jobs:
       - name: build with gradle
         run: |
           chmod +x gradlew
-          ./gradlew clean build -x test --build-cache
+          ./gradlew clean build -x test
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2.9.1
