--- a/Dockerfile-prod
+++ b/Dockerfile-prod
@@ -2,9 +2,7 @@ FROM gradle:8.8-jdk17 AS builder
 WORKDIR /usr/src
 
 # 로컬에 있는 모든 소스 복사
-COPY docker-compose-*.yml Dockerfile-* /usr/src/
-COPY src /usr/src/src
-COPY build.gradle settings.gradle /usr/src/
+COPY . /usr/src
 
 # 빌드 (테스트 스킵)
 RUN chmod +x ./gradlew
@@ -14,4 +12,4 @@ FROM openjdk:17-jdk-alpine
 WORKDIR /app
 COPY --from=builder /usr/src/build/libs/napzak-0.0.1-SNAPSHOT.jar /app/app.jar
 
-ENTRYPOINT ["java", "-jar", "/app/app.jar", "--spring.profiles.active=prod"]
+ENTRYPOINT ["java", "-jar", "/app/app.jar", "--spring.profiles.active=dev"]
