--- a/.github/workflows/dev-CD.yml
+++ b/.github/workflows/dev-CD.yml
@@ -28,8 +28,10 @@ jobs:
 
       - name: Create secret config file
         run: |
-          cd src/main/resources
-          echo "${{ secrets.APPLICATION_DEV }}" > ./application-dev.yml
+          mkdir -p src/main/resources
+          echo "${{ secrets.APPLICATION_DEV }}" > src/main/resources/application-dev.yml
+          ls -la src/main/resources
+          cat src/main/resources/application-dev.yml
 
       - name: Build with Gradle
         run: |
