--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,9 @@
 # 예외
 !gradle/wrapper/gradle-wrapper.jar
 
+#로컬 테스트용 개인 private-key
+src/main/resources/napzak-local.p12
+
 # User-specific stuff
 .idea/**/workspace.xml
 .idea/**/tasks.xml
