[#100] feat: 멀티모듈 기반 docker-compose-dev 수정

--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -1,13 +1,35 @@
+# docker-compose-dev.yml
 version: "3.8"
 
 services:
-  napzak-dev:
-    container_name: napzak-dev
-    image: "sailin1367/napzak-dev:latest"
+  api-server:
+    container_name: napzak-api-dev
+    image: "sailin1367/napzak-api-dev:latest"
+    build:
+      context: .
+      dockerfile: Dockerfile-api-dev
     ports:
       - "8080:8080"
     depends_on:
       redis:
+        condition: service_healthy
+      rabbitmq:
+        condition: service_healthy
+    networks:
+      - napzak-dev-net
+
+  chat-server:
+    container_name: napzak-chat-dev
+    image: "sailin1367/napzak-chat-dev:latest"
+    build:
+      context: .
+      dockerfile: Dockerfile-chat-dev
+    ports:
+      - "8081:8080"
+    depends_on:
+      redis:
+        condition: service_healthy
+      rabbitmq:
         condition: service_healthy
     networks:
       - napzak-dev-net
@@ -27,7 +49,26 @@ services:
       retries: 3
     networks:
       - napzak-dev-net
-    restart: always  # 컨테이너가 종료되면 자동 재시작
+    restart: always
+
+  rabbitmq:
+    container_name: napzak-dev-rabbitmq
+    image: rabbitmq:3.12-management
+    ports:
+      - "5672:5672"
+      - "15672:15672"
+      - "61613:61613"
+    environment:
+      RABBITMQ_DEFAULT_USER: napzak_user      # ← spring 설정과 동일
+      RABBITMQ_DEFAULT_PASS: napzak_pw
+    healthcheck:
+      test: ["CMD", "rabbitmqctl", "status"]
+      interval: 10s
+      timeout: 10s
+      retries: 5
+    networks:
+      - napzak-dev-net
+    restart: always
 
 networks:
   napzak-dev-net:
