--- a/.github/workflows/dev-CD.yml
+++ b/.github/workflows/dev-CD.yml
@@ -1,3 +1,4 @@
+# dev-CD.yml
 name: dev-CD
 
 on:
@@ -5,63 +6,59 @@ on:
     branches: [ "develop" ]
 
 jobs:
-  CI:
+  build-push:
     runs-on: ubuntu-22.04
     environment: dev
 
     steps:
-      - name: Checkout
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v3
 
-      - name: Cache Gradle dependencies
-        uses: actions/cache@v3
-        with:
-          path: ~/.gradle/caches
-          key: gradle-${{ runner.os }}-${{ hashFiles('**/*.gradle', '**/gradle-wrapper.properties') }}
-          restore-keys: gradle-${{ runner.os }}-
-
-      - name: Set up JDK 17
-        uses: actions/setup-java@v3
+      - uses: actions/setup-java@v3
         with:
           java-version: '17'
           distribution: 'corretto'
 
-      - name: Create secret config file
+      # ↓↓↓ 이미지 빌드에 필요한 Secret 파일 주입 ↓↓↓
+      - name: Inject API secrets
         run: |
-          mkdir -p src/main/resources
-          echo "${{ secrets.APPLICATION_DEV }}" > src/main/resources/application-dev.yml
-          ls -la src/main/resources
-          cat src/main/resources/application-dev.yml
+          echo "${{ secrets.API_APPLICATION_DEV }}" > api-server/src/main/resources/application-dev.yml
+          mkdir -p api-server/src/main/resources/firebase
+          echo "${{ secrets.API_FIREBASE_JSON }}" > api-server/src/main/resources/firebase/napzak-firebase-adminsdk.json
 
-      - name: Build with Gradle
+      - name: Inject Chat secrets
         run: |
-          chmod +x gradlew
-          ./gradlew clean build -x test
+          echo "${{ secrets.CHAT_APPLICATION_DEV }}" > chat-server/src/main/resources/application-dev.yml
+          mkdir -p chat-server/src/main/resources/firebase
+          echo "${{ secrets.CHAT_FIREBASE_JSON }}" > chat-server/src/main/resources/firebase/napzak-firebase-adminsdk.json
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2.9.1
-
-      - name: Login to Docker Hub
-        uses: docker/login-action@v2.2.0
+      - uses: docker/login-action@v2
         with:
           username: ${{ secrets.DEV_DOCKERHUB_USERNAME }}
           password: ${{ secrets.DEV_DOCKERHUB_TOKEN }}
 
-      - name: Build and push Docker image
+      - name: Build & push API image
         uses: docker/build-push-action@v4
         with:
           context: .
-          file: ./Dockerfile-dev
+          file: ./Dockerfile-api-dev
           push: true
-          tags: ${{ secrets.DEV_DOCKERHUB_USERNAME }}/${{ secrets.DEV_REPONAME }}:latest
+          tags: ${{ secrets.DEV_DOCKERHUB_USERNAME }}/napzak-api-dev:latest
 
-  CD:
-    needs: [CI]
+      - name: Build & push Chat image
+        uses: docker/build-push-action@v4
+        with:
+          context: .
+          file: ./Dockerfile-chat-dev
+          push: true
+          tags: ${{ secrets.DEV_DOCKERHUB_USERNAME }}/napzak-chat-dev:latest
+
+  deploy:
+    needs: build-push
     runs-on: ubuntu-22.04
     environment: dev
 
     steps:
-      - name: Docker Image Pull and Run
+      - name: SSH deploy
         uses: appleboy/ssh-action@master
         with:
           host: ${{ secrets.DEV_SERVER_HOST }}
