--- a/.github/workflows/dev-CI.yml
+++ b/.github/workflows/dev-CI.yml
@@ -1,3 +1,4 @@
+# dev-CI.yml
 name: dev-CI
 
 on:
@@ -10,21 +11,28 @@ jobs:
     environment: dev
 
     steps:
-      - name: Checkout
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v3
 
-      - name: Set up JDK 17
-        uses: actions/setup-java@v3
+      - uses: actions/setup-java@v3
         with:
           java-version: '17'
           distribution: 'corretto'
 
-      - name: create secret config file
+      # Secret 파일 주입 (API)
+      - name: Inject API secrets
         run: |
-          cd src/main/resources
-          echo "${{ secrets.APPLICATION_DEV }}" > ./application-dev.yml
+          echo "${{ secrets.API_APPLICATION_DEV }}" > api-server/src/main/resources/application-dev.yml
+          mkdir -p api-server/src/main/resources/firebase
+          echo "${{ secrets.API_FIREBASE_JSON }}" > api-server/src/main/resources/firebase/napzak-firebase-adminsdk.json
 
-      - name: build with gradle
+      # Secret 파일 주입 (Chat)
+      - name: Inject Chat secrets
         run: |
-          chmod +x gradlew
+          echo "${{ secrets.CHAT_APPLICATION_DEV }}" > chat-server/src/main/resources/application-dev.yml
+          mkdir -p chat-server/src/main/resources/firebase
+          echo "${{ secrets.CHAT_FIREBASE_JSON }}" > chat-server/src/main/resources/firebase/napzak-firebase-adminsdk.json
+
+      - name: Build (Gradle)
+        run: |
+          chmod +x ./gradlew
           ./gradlew clean build -x test
