[#100] feat: .gitignore 수정

--- a/.gitignore
+++ b/.gitignore
@@ -186,6 +186,7 @@ Temporary Items
 src/main/resources/application-local.yml
 src/main/resources/application-dev.yml
 src/main/resources/application-prod.yml
+**/application-*.yml
 
 ## Ignore Qclass
 src/main/generated/querydsl
