[#105] deploy: Dockerfile 수정

--- a/Dockerfile-chat-dev
+++ b/Dockerfile-chat-dev
@@ -1,19 +1,18 @@
 # Dockerfile-chat-dev
+
 FROM gradle:8.8-jdk17 AS builder
 WORKDIR /usr/src/app
 
-# --- build stage --------------------------------------------------
 COPY . .
 
 RUN chmod +x ./gradlew \
-  && ./gradlew :chat-server:clean :chat-server:build -x test
+    && ./gradlew :chat-server:bootJar -x test
 
-# --- runtime stage ------------------------------------------------
 FROM openjdk:17-jdk-alpine
 WORKDIR /app
 
-COPY --from=builder /usr/src/app/chat-server/build/libs/*-SNAPSHOT.jar /app/app.jar
+COPY --from=builder /usr/src/app/chat-server/build/libs/*SNAPSHOT.jar /app/app.jar
 COPY --from=builder /usr/src/app/chat-server/src/main/resources/application-dev.yml /app/application-dev.yml
 COPY --from=builder /usr/src/app/chat-server/src/main/resources/firebase/napzak-firebase-adminsdk.json /app/firebase/napzak-firebase-adminsdk.json
 
-ENTRYPOINT ["java","-jar","/app/app.jar","--spring.profiles.active=dev"]
+ENTRYPOINT ["java", "-jar", "/app/app.jar", "--spring.profiles.active=dev"]
