--- a/Dockerfile-api-dev
+++ b/Dockerfile-api-dev
@@ -1,17 +1,20 @@
-# Dockerfile-api-dev
+# ---------------- Dockerfile-api-dev ----------------
 FROM gradle:8.8-jdk17 AS builder
 WORKDIR /usr/src/app
 
 COPY . .
-
 RUN chmod +x ./gradlew \
-    && ./gradlew :api-server:bootJar -x test
+ && ./gradlew :api-server:clean :api-server:bootJar -x test        # ← bootJar 하나만
 
+# ---------- runtime ----------
 FROM openjdk:17-jdk-alpine
 WORKDIR /app
 
-COPY --from=builder /usr/src/app/api-server/build/libs/*SNAPSHOT.jar /app/app.jar
+# fat-jar 복사 (단일 패턴, 중복 없음)
+COPY --from=builder /usr/src/app/api-server/build/libs/api-server-*-SNAPSHOT.jar /app/app.jar
+
+# 외부 설정
 COPY --from=builder /usr/src/app/api-server/src/main/resources/application-dev.yml /app/application-dev.yml
 COPY --from=builder /usr/src/app/api-server/src/main/resources/firebase/napzak-firebase-adminsdk.json /app/firebase/napzak-firebase-adminsdk.json
 
-ENTRYPOINT ["java", "-jar", "/app/app.jar", "--spring.profiles.active=dev"]
+ENTRYPOINT ["java","-jar","/app/app.jar","--spring.profiles.active=dev"]
