--- a/chat-server/build.gradle
+++ b/chat-server/build.gradle
@@ -1,3 +1,4 @@
+// api-server build.gradle
 plugins {
     id 'org.springframework.boot'
 }
@@ -33,4 +34,9 @@ dependencies {
     // Spring Security for WebSocket
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.security:spring-security-messaging'
+}
+
+jar { enabled = false }
+tasks.named('bootJar') {
+    archiveFileName = 'chat-server.jar'
 }
