--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,4 @@
+// root build.gradle
 plugins {
     id 'org.springframework.boot' version '3.3.1' apply false
     id 'io.spring.dependency-management' version '1.1.5' apply false
