[#105] deploy: jar 파일 이름 변경에 따른 Dockerfile 수정

--- a/Dockerfile-chat-dev
+++ b/Dockerfile-chat-dev
@@ -1,7 +1,6 @@
 # ---------------- Dockerfile-chat-dev ----------------
 FROM gradle:8.8-jdk17 AS builder
 WORKDIR /usr/src/app
-
 COPY . .
 RUN chmod +x ./gradlew \
  && ./gradlew :chat-server:clean :chat-server:bootJar -x test
@@ -10,8 +9,7 @@ RUN chmod +x ./gradlew \
 FROM openjdk:17-jdk-alpine
 WORKDIR /app
 
-COPY --from=builder /usr/src/app/chat-server/build/libs/chat-server-*-SNAPSHOT.jar /app/app.jar
-COPY --from=builder /usr/src/app/chat-server/src/main/resources/application-dev.yml /app/application-dev.yml
-COPY --from=builder /usr/src/app/chat-server/src/main/resources/firebase/napzak-firebase-adminsdk.json /app/firebase/napzak-firebase-adminsdk.json
-
-ENTRYPOINT ["java","-jar","/app/app.jar","--spring.profiles.active=dev"]
+COPY --from=builder /usr/src/app/chat-server/build/libs/chat-server.jar /app/
+COPY --from=builder /usr/src/app/chat-server/src/main/resources/application-dev.yml /app/
+COPY --from=builder /usr/src/app/chat-server/src/main/resources/firebase/napzak-firebase-adminsdk.json /app/firebase/
+ENTRYPOINT ["java","-jar","/app/chat-server.jar","--spring.profiles.active=dev"]
