--- a/Dockerfile-api-dev
+++ b/Dockerfile-api-dev
@@ -1,20 +1,14 @@
 # ---------------- Dockerfile-api-dev ----------------
+# ---------- build ----------
 FROM gradle:8.8-jdk17 AS builder
 WORKDIR /usr/src/app
-
 COPY . .
-RUN chmod +x ./gradlew \
- && ./gradlew :api-server:clean :api-server:bootJar -x test        # ← bootJar 하나만
+RUN chmod +x ./gradlew && ./gradlew :api-server:bootJar -x test
 
 # ---------- runtime ----------
 FROM openjdk:17-jdk-alpine
 WORKDIR /app
-
-# fat-jar 복사 (단일 패턴, 중복 없음)
-COPY --from=builder /usr/src/app/api-server/build/libs/api-server-*-SNAPSHOT.jar /app/app.jar
-
-# 외부 설정
-COPY --from=builder /usr/src/app/api-server/src/main/resources/application-dev.yml /app/application-dev.yml
-COPY --from=builder /usr/src/app/api-server/src/main/resources/firebase/napzak-firebase-adminsdk.json /app/firebase/napzak-firebase-adminsdk.json
-
-ENTRYPOINT ["java","-jar","/app/app.jar","--spring.profiles.active=dev"]
+COPY --from=builder /usr/src/app/api-server/build/libs/api-server.jar /app/
+COPY --from=builder /usr/src/app/api-server/src/main/resources/application-dev.yml /app/
+COPY --from=builder /usr/src/app/api-server/src/main/resources/firebase/napzak-firebase-adminsdk.json /app/firebase/
+ENTRYPOINT ["java","-jar","/app/api-server.jar","--spring.profiles.active=dev"]
