--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -1,33 +1,24 @@
 # docker-compose-dev.yml
-
 version: "3.8"
 
 services:
   api-server:
+    image: sailin1367/napzak-api-dev:latest
     container_name: napzak-api-dev
-    image: "sailin1367/napzak-api-dev:latest"
-    ports:
-      - "8080:8080"
+    ports: ["8080:8080"]
     depends_on:
-      redis:
-        condition: service_healthy
-      rabbitmq:
-        condition: service_healthy
-    networks:
-      - napzak-dev-net
+      redis: { condition: service_healthy }
+      rabbitmq: { condition: service_healthy }
+    networks: [napzak-dev-net]
 
   chat-server:
+    image: sailin1367/napzak-chat-dev:latest
     container_name: napzak-chat-dev
-    image: "sailin1367/napzak-chat-dev:latest"
-    ports:
-      - "8081:8080"
+    ports: ["8081:8080"]
     depends_on:
-      redis:
-        condition: service_healthy
-      rabbitmq:
-        condition: service_healthy
-    networks:
-      - napzak-dev-net
+      redis: { condition: service_healthy }
+      rabbitmq: { condition: service_healthy }
+    networks: [napzak-dev-net]
 
   redis:
     container_name: napzak-dev-redis
