[#120] fix(build.gradle):Java 컴파일 시 파라미터 이름을 보존하도록 -parameters 옵션 추가 (Spring Data 지원 목적)

--- a/api-server/build.gradle
+++ b/api-server/build.gradle
@@ -73,6 +73,7 @@ tasks.named('bootJar') {                   // fat-jar 이름 고정
 def queryDslSrcDir = 'src/main/generated/querydsl/'
 
 tasks.withType(JavaCompile).configureEach {
+    options.compilerArgs += "-parameters"
     options.getGeneratedSourceOutputDirectory().set(file(queryDslSrcDir))
 }
 
