--- a/Dockerfile-chat-dev
+++ b/Dockerfile-chat-dev
@@ -16,4 +16,6 @@ COPY chat-server/src/main/resources/firebase/napzak-firebase-adminsdk.json /app/
 # ✅ JAR 파일은 builder에서 복사
 COPY --from=builder /usr/src/app/chat-server/build/libs/chat-server.jar /app/
 
+ENV TZ=Asia/Seoul
+ENV JAVA_TOOL_OPTIONS="-Duser.timezone=Asia/Seoul"
 ENTRYPOINT ["java", "-jar", "/app/chat-server.jar", "--spring.profiles.active=dev"]
