--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -1,16 +1,23 @@
 version: "3.8"
 
 services:
-  napzak-prod:
-    container_name: napzak-prod
-    image: "sailin1367/napzak-prod:latest"
-    ports:
-      - "8080:8080"
+  api-server:
+    image: sailin1367/napzak-api-prod:latest
+    container_name: napzak-api-prod
+    ports: ["8080:8080"]
     depends_on:
-      redis:
-        condition: service_healthy
-    networks:
-      - napzak-prod-net
+      redis: { condition: service_healthy }
+      rabbitmq: { condition: service_healthy }
+    networks : [napzak-prod-net]
+
+  chat-server:
+    image: sailin1367/napzak-chat-prod:latest
+    container_name: napzak-chat-prod
+    ports: ["8081:8080"]
+    depends_on:
+      redis: { condition: service_healthy }
+      rabbitmq: { condition: service_healthy }
+    networks: [napzak-prod-net]
 
   redis:
     container_name: napzak-prod-redis
@@ -27,7 +34,26 @@ services:
       retries: 3
     networks:
       - napzak-prod-net
-    restart: always  # 컨테이너가 종료되면 자동 재시작
+    restart: always
+
+  rabbitmq:
+    container_name: napzak-prod-rabbitmq
+    image: rabbitmq:3.12-management
+    ports:
+      - "5672:5672"
+      - "15672:15672"
+      - "61613:61613"
+    environment:
+      RABBITMQ_DEFAULT_USER: napzak_user
+      RABBITMQ_DEFAULT_PASS: napzak_pw
+    healthcheck:
+      test: ["CMD", "rabbitmqctl", "status"]
+      interval: 10s
+      timeout: 10s
+      retries: 5
+    networks:
+      - napzak-prod-net
+    restart: always
 
 networks:
   napzak-prod-net:
