--- a/.github/workflows/prod-api-CD.yml
+++ b/.github/workflows/prod-api-CD.yml
@@ -7,7 +7,7 @@ on:
 jobs:
   build-push:
     runs-on: ubuntu-22.04
-    environment: prod-api
+    environment: prod
 
     steps:
       - uses: actions/checkout@v3
