--- a/.github/workflows/prod-api-CI.yml
+++ b/.github/workflows/prod-api-CI.yml
@@ -25,9 +25,10 @@ jobs:
       # Secret 파일 주입 (API)
       - name: Inject API secrets
         run: |
-          echo "${{ secrets.API_APPLICATION_PROD }}" > api-server/src/main/resources/application-api-prod.yml
+          printf '%s' "${{ secrets.API_APPLICATION_PROD }}" > api-server/src/main/resources/application-api-prod.yml
           mkdir -p api-server/src/main/resources/firebase
-          echo "${{ secrets.API_FIREBASE_JSON }}" > api-server/src/main/resources/firebase/napzak-firebase-adminsdk.json
+          printf '%s' "${{ secrets.API_FIREBASE_JSON_B64 }}" | base64 -d \
+            > api-server/src/main/resources/firebase/napzak-firebase-adminsdk.json
 
       - name: Build (Gradle)
         run: |
