--- a/.github/workflows/prod-chat-CD.yml
+++ b/.github/workflows/prod-chat-CD.yml
@@ -19,9 +19,10 @@ jobs:
 
       - name: Inject CHAT secrets
         run: |
-          echo "${{ secrets.CHAT_APPLICATION_PROD }}" > chat-server/src/main/resources/application-chat-prod.yml
+          printf '%s' "${{ secrets.CHAT_APPLICATION_PROD }}" > chat-server/src/main/resources/application-chat-prod.yml
           mkdir -p chat-server/src/main/resources/firebase
-          echo "${{ secrets.CHAT_FIREBASE_JSON }}" > chat-server/src/main/resources/firebase/napzak-firebase-adminsdk.json
+          printf '%s' "${{ secrets.CHAT_FIREBASE_JSON_B64 }}" | base64 -d \
+            > chat-server/src/main/resources/firebase/napzak-firebase-adminsdk.json
 
       - uses: docker/login-action@v2
         with:
