[deploy] #194 - api 서버 무중단배포 환경 구축

--- a/docker-compose-api-prod.yml
+++ b/docker-compose-api-prod.yml
@@ -23,12 +23,15 @@ services:
       timeout: 5s
       retries: 3
     networks:
-      - napzak-prod-net
+      napzak-prod-net:
+        aliases:
+          - redis
+          - napzak-prod-redis
     restart: always
 
 networks:
   napzak-prod-net:
-    driver: bridge
+    driver: external
 
 volumes:
   redis_data:
