[deploy] #194 - api 서버 무중단배포 환경 구축

--- a/.github/workflows/prod-api-CI.yml
+++ b/.github/workflows/prod-api-CI.yml
@@ -8,6 +8,7 @@ on:
       - "api-server/**"
       - "common-module/**"
       - "core-domain/**"
+      - ".github/workflows/prod-api-*.yml"
 
 jobs:
   build:
