--- a/.github/workflows/prod-api-CD.yml
+++ b/.github/workflows/prod-api-CD.yml
@@ -4,6 +4,12 @@ on:
   push:
     branches: [ "main" ]
 
+env:
+    ECR_HOST: ${{ secrets.API_ECR_HOST }}
+    ECR_APP_NAME: ${{ secrets.API_ECR_APP_NAME }}
+    APP_ECR_REPO: ${{ env.ECR_HOST }}/${{ env.ECR_APP_NAME }}
+    IMAGE_TAG: ${{ github.sha }}
+
 jobs:
   build-push:
     runs-on: ubuntu-22.04
@@ -24,10 +30,21 @@ jobs:
           printf '%s' "${{ secrets.API_FIREBASE_JSON_B64 }}" | base64 -d \
             > api-server/src/main/resources/firebase/napzak-firebase-adminsdk.json
 
-      - uses: docker/login-action@v2
+      - name: Configure AWS credentials with OIDC
+        uses: aws-actions/configure-aws-credentials@v4
         with:
-          username: ${{ secrets.PROD_DOCKERHUB_USERNAME }}
-          password: ${{ secrets.PROD_DOCKERHUB_TOKEN }}
+          role-to-assume: ${{ secrets.AWS_OIDC_ROLE_ARN }}
+          aws-region: ap-northeast-2
+
+      - name: Login to Amazon ECR
+        run: |
+          aws ecr get-login-password --region ap-northeast-2 | \
+          docker login --username AWS --password-stdin ${{ env.ECR_HOST }}
+
+      - name: Ensure ECR repository exists
+        run: |
+          aws ecr describe-repositories --repository-names "${{ env.ECR_APP_NAME }}" >/dev/null 2>&1 || \
+          aws ecr create-repository --repository-name "${{ env.ECR_APP_NAME }}" >/dev/null
 
       - name: Build & push API image
         uses: docker/build-push-action@v4
@@ -35,7 +52,9 @@ jobs:
           context: .
           file: ./Dockerfile-api-prod
           push: true
-          tags: ${{ secrets.PROD_DOCKERHUB_USERNAME }}/napzak-api-prod:latest
+          tags: |
+            ${{ env.APP_ECR_REPO }}:${{ env.IMAGE_TAG }}
+            ${{ env.APP_ECR_REPO }}:latest
 
   deploy:
     needs: build-push
@@ -45,9 +64,14 @@ jobs:
     steps:
       - name: SSH deploy
         uses: appleboy/ssh-action@master
+        env:
+          ECR_HOST: ${{ env.ECR_HOST }}
+          ECR_APP_NAME: ${{ env.ECR_APP_NAME }}
+          IMAGE_TAG: ${{ env.IMAGE_TAG }}
         with:
           host: ${{ secrets.PROD_API_SERVER_HOST }}
           username: ${{ secrets.PROD_SERVER_USERNAME }}
           key: ${{ secrets.PROD_API_SERVER_KEY }}
+          envs: ECR_HOST, ECR_APP_NAME, IMAGE_TAG
           script: |
             bash /home/ubuntu/Napzak-BE/deploy-blue-green.sh
