[refactor] #218 - 도커 이미지 레지스트리 변경 - 에러 수정

--- a/.github/workflows/prod-api-CD.yml
+++ b/.github/workflows/prod-api-CD.yml
@@ -9,6 +9,10 @@ env:
     ECR_APP_NAME: ${{ secrets.API_ECR_APP_NAME }}
     IMAGE_TAG: ${{ github.sha }}
 
+permissions:
+  id-token: write
+  contents: read
+
 jobs:
   build-push:
     runs-on: ubuntu-22.04
