[refactor] #218 - 도커 이미지 레지스트리 변경

--- a/docker-compose-chat-green-prod.yml
+++ b/docker-compose-chat-green-prod.yml
@@ -1,7 +1,7 @@
 version: "3.8"
 services:
   chat-server-green:
-    image: sailin1367/napzak-chat-prod:latest
+    image: 589744711112.dkr.ecr.ap-northeast-2.amazonaws.com/napzak-chat-prod:latest
     container_name: napzak-chat-green-prod
     ports: ["8081:8080"]
     networks: ["napzak-prod-net"]
