--- a/.github/workflows/prod-api-CD.yml
+++ b/.github/workflows/prod-api-CD.yml
@@ -36,8 +36,8 @@ jobs:
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
-          aws-access-key-id: ${{ secrets.API_ACCESS_KEY }}
-          aws-secret-access-key: ${{ secrets.API_SECRET_KEY }}
+          aws-access-key-id: ${{ secrets.AWS_API_ACCESS_KEY }}
+          aws-secret-access-key: ${{ secrets.AWS_API_SECRET_KEY }}
           aws-region: ap-northeast-2
 
       - name: Login to Amazon ECR
